// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v1 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "abdb9ef454702b3fae2f8002be40a8c2903514143b45592292ac8920e35cb60a",
    "packageName": "yargs",
    "version": "17.6.2",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v1 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@8.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v2 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "abdb9ef454702b3fae2f8002be40a8c2903514143b45592292ac8920e35cb60a",
    "packageName": "yargs",
    "version": "17.6.2",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v2 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@8.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v3 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "abdb9ef454702b3fae2f8002be40a8c2903514143b45592292ac8920e35cb60a",
    "packageName": "yargs",
    "version": "17.6.2",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v3 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@8.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v1 1`] = `
Object {
  "data": Object {
    "hash": "0e69266e94bbe89cb6c7555e1ab56fb9d4c0e4fe2cbb674b92fc1ee200053526",
    "packageName": "nx",
    "version": "15.0.13",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v1 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/lockfile",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/parsers",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@zkochan/js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:axios",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:strong-log-transformer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v2 1`] = `
Object {
  "data": Object {
    "hash": "64ba4128469ecb7d465d8dbed1ccd86be85c38177e85406f2cd6055f303758fa",
    "packageName": "nx",
    "version": "15.0.13",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v2 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/lockfile",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/parsers",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@zkochan/js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:axios",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:strong-log-transformer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v3 1`] = `
Object {
  "data": Object {
    "hash": "b661da6137e80c92cb5fa75b96780e12868eb81969dddaee67113a99f4ffd159",
    "packageName": "nx",
    "version": "15.0.13",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v3 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/lockfile",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/parsers",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@zkochan/js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:axios",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:strong-log-transformer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "abdb9ef454702b3fae2f8002be40a8c2903514143b45592292ac8920e35cb60a",
    "packageName": "yargs",
    "version": "17.6.2",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui@8.0.1",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 1`] = `
Object {
  "data": Object {
    "hash": "94bc770238bff74b1b80368ad38fc1c0e3efb23e2bef72afb3c41703b3459a2f",
    "packageName": "nx",
    "version": "15.1.0",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/lockfile",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/parsers",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@zkochan/js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:axios",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:strong-log-transformer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib@2.4.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 3`] = `
Object {
  "data": Object {
    "hash": "601ac9f28fb76d7e6d1d15600097ca3d8f636990b659c73cf44d3e4030e68c56",
    "packageName": "@phenomnomnominal/tsquery",
    "version": "4.1.1",
  },
  "name": "npm:@phenomnomnominal/tsquery",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 4`] = `
Array [
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:esquery",
    "type": "static",
  },
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:typescript",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "abdb9ef454702b3fae2f8002be40a8c2903514143b45592292ac8920e35cb60a",
    "packageName": "yargs",
    "version": "17.6.2",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map successfully complex lock file 1`] = `
Object {
  "data": Object {
    "hash": "40aa56160d8f45fdf5e3f0500d5f9de7fd915a3037e4793aeac84e3498f90e6b",
    "packageName": "nx",
    "version": "15.0.13",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map successfully complex lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/lockfile",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@yarnpkg/parsers",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@zkochan/js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:axios",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui@7.0.4",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:strong-log-transformer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib@2.4.1",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;
